--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==1.0.2
-MarkupSafe==1.0
-decorator==4.3.0
-itsdangerous==0.24
-six==1.11.0
-brotlipy==0.7.0
+Flask
+MarkupSafe
+decorator
+itsdangerous
+six
+brotlipy
 raven[flask]
-werkzeug==0.14.1
-gevent==1.3.4
-flasgger==0.9.0
+werkzeug<2.1.0
+gevent
+flasgger
